CloudFormation file added. index.html updated.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section class="section__hero">
         <h1 class="section__hero--head">Professional Web Design</h1>
-        <p class="section__hero--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
+        <p class="section__hero--para">This is a static website application deployed with Apache Web Server on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation Service. The design of Website created by Zuvay and deployment with Apache Web Server on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation Service is made by Feyzullah SARI.</p>
     </section>
 
     <section class="section__newsletter">
