--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Web Design</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="./images/lighthouse-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/var/www/html/images/lighthouse-icon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -42,17 +42,17 @@
 
     <section class="section__logo">
         <div class="section__logo--html">
-            <img src="./images/logo_html.png" alt="HTML Logo" class="section__logo--html-img">
+            <img src="/var/www/html/images/logo_html.png" alt="HTML Logo" class="section__logo--html-img">
             <h3>HTML5 Markup</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
         </div>
         <div class="section__logo--css">
-            <img src="./images/logo_css.png" alt="CSS Logo" class="section__logo--css-img">
+            <img src="/var/www/html/images/logo_css.png" alt="CSS Logo" class="section__logo--css-img">
             <h3>CSS3 Styling</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
         </div>
         <div class="section__logo--graphic">
-            <img src="./images/logo_brush.png" alt="Brush Logo" class="section__logo--graphic-img">
+            <img src="/var/www/html/images/logo_brush.png" alt="Brush Logo" class="section__logo--graphic-img">
             <h3>Graphic Design</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
         </div>
@@ -61,7 +61,7 @@
     <footer class="footer">
         <div class="footer__container">
             <p class="footer__p">Clarusway Web Design, Copyright © 2020</p>
-            <img src="./images/clarusway_logo.png" alt="Clarusway-Logo" class="footer__img">
+            <img src="/var/www/html/images/clarusway_logo.png" alt="Clarusway-Logo" class="footer__img">
         </div>
     </footer>
 </body>
