--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section class="section__hero">
         <h1 class="section__hero--head">Professional Web Design</h1>
-        <p class="section__hero--para">This is a static website application deployed with Apache Web Server on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation Service. The design of Website created by Zuvay and deployment with Apache Web Server on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation Service is made by Feyzullah SARI.</p>
+        <p class="section__hero--para">This is a static website application deployed with Apache Web Server on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation Service. The design of Website created by Zuvay and deployment with Apache Web Server on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation Service is made by Feyzullah SARI. Please add your commends below.</p>
     </section>
 
     <section class="section__newsletter">
