Some explanations changed.

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="header__left">
-            <p><span>Clarusway</span> Web Design</p>
+            <p><span>Team5</span> Web Design Project</p>
         </div>
         <div class="header__right">
             <ul class="header__right--navbar">
@@ -26,7 +26,7 @@
 
     <section class="section__newsletter">
         <div class="section__newsletter--subscribe">
-            <p>Subscribe To Our Newsletter</p>
+            <p>Subscribe Newsletter</p>
         </div>
         <div class="section__newsletter--email">
             <input type="email" name="email" class="section__newsletter--email-input" placeholder="Enter Email...">
@@ -37,8 +37,8 @@
     <section class="section__main">
         <div class="section__main--about">
             <h3>About Us</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius auctor lacus nec feugiat. Phasellus sit amet ex ipsum. Praesent pharetra tincidunt tempor. Etiam velit eros, dapibus eget porta in, lacinia et magna. Nam eget eros non orci
-                consectetur congue at ac augue. Proin eget arcu in enim feugiat ultricies. Curabitur maximus metus nec metus pretium viverra at et orci. Integer hendrerit ante ut placerat cursus.</p>
+            <p>This is a project of multi contributers. One works on cloud side and one works on design side.
+                Curabitur maximus metus nec metus pretium viverra at et orci. Integer hendrerit ante ut placerat cursus.</p>
             <p>Aliquam eget pharetra diam. Nulla placerat lorem at turpis tempor, vel ultrices dui tincidunt. Proin quis egestas lorem. Mauris vehicula lectus odio, sit amet dictum justo feugiat a. Praesent id dictum lacus. Sed ullamcorper id erat ut dictum.
                 Fusce porttitor lorem sapien, in aliquet sapien convallis et. Donec nec mauris nulla. Curabitur cursus semper odio, et hendrerit ante. Nunc at cursus ante. Maecenas gravida ligula ut efficitur suscipit. Nulla id turpis varius, pretium
                 nunc sed, fermentum sem. Sed lacinia nunc non interdum pellentesque.</p>
@@ -52,7 +52,7 @@
 
     <footer class="footer">
         <div class="footer__container">
-            <p class="footer__p">Clarusway Web Design, Copyright © 2020</p>
+            <p class="footer__p">Team5 Web Design, Copyright © 2020</p>
             <img src="./images/clarusway_logo.png" alt="Clarusway-Logo" class="footer__img">
         </div>
     </footer>
